deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hackseek
  labels:
    name: hackseek
    environment: production
